# cortado

./: CONTRIBUTING.md  NOTICE.txt  README.md  catalog-info.yaml  mapping.json  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report_general.yaml  bug_report_rta.yaml  feature_request.yaml
.github/workflows/: code-checks.yaml  community.yml  release.yaml
cortado/: cli.py  elastic.py  mapping.py  rta_cli.py  rtas_cli.py  rules.py  runner.py  utils.py
cortado/rtas/: README.md  __init__.py  _cli.py  _common.py  _const.py  account_discovery_domain.py  adobe_hijack.py  adobe_priv_helper_tool.py  amsi_bypass_via_unbacked_memory.py  app_bundler_execution.py  app_hijack.py  appcompat_shim.py  applescript_decoded_via_base64.py  at_command.py  at_job.py  atom_init_coffee.py  attempt_to_establish_vscode.py  attempt_to_mount_a_remote_webdav_share.py  auth_plugin.py  automator_workflows.py  background_process_from_tmp.py  bash_cmdline_history.py  bifrost_attack.py  binary_execution_from_shared_memory.py  binary_masquerade.py  bitsadmin_download.py  bitsadmin_execution.py  browser_cred_access.py  browser_debugging.py  browser_exec_downloaded_file.py  brute_force_login.py  builtin_cmd_file_delete.py  c2_dns_from_iso.py  calendar_file_mod.py  cat_network_activity.py  certutil_file_obfuscation.py  certutil_webrequest.py  child_w3wp.py  clear_linux_system_logs.py  cloud_eicar.py  (+664 more)
cortado/rtas/src/: DoublePersist.cs  ditto_and_spawn.c  linux_ditto_and_spawn_parent_child.c  regsvr32.cs
scripts/: check-license.sh
tests/: test_rtas.py
