[project]
name = "cortado"
version = "0.1.0"
description = "Consolidated RTAs and corresponding orchestration code"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

# To become unnecessary with https://github.com/python-poetry/poetry/pull/9135
[tool.poetry]
name = "cortado"
version = "0.1.0"
description = "Consolidated RTAs and corresponding orchestration code"
authors = ["Elastic TRADE team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
# Dependencies for orchestration utils
typer = { version = "^0.12", optional = true }
structlog = { version = "^24.4", optional = true }
ecs-logging = { version = "^2.0.0", optional = true } 
rich = { version = "^13.9.1", optional = true}
pyyaml = {version = "^6.0.2", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pytest = "^8.3"
typing-extensions = "^4.12"
pyright = "^1.1.381"

[tool.poetry.extras]
utils = ["typer", "structlog", "ecs-logging", "rich", "pyyaml"]

[tool.poetry.scripts]
cortado-run-rta = "cortado.rtas._cli:run_rta"
cortado-run-rtas = "cortado.rtas._cli:run_rtas_for_os"
cortado = "cortado.cli:run_cli"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pyright]
reportMissingTypeStubs = true
reportUnusedCallResult = "error"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

